feat: add global styles

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
   "search.exclude": {
-    "**/dist/**": true,
+    "**/dist/**/*": true,
     "**/node_modules": true,
     "**/bower_components": true,
     "**/*.code-search": true
