--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/rss": "^4.0.5",
     "astro": "^4.5.10",
     "lodash": "^4.17.21"
   }
