--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,9 @@
 {
   "extends": "astro/tsconfigs/base",
   "compilerOptions": {
-    "baseUrl": "/Users/rubens/tutorial",
+    "baseUrl": ".",
+    "allowJs": true,
+    "strictNullChecks": true,
     "paths": {
       "$components/*": [
         "src/components/*"
